@@ -33,7 +33,7 @@
 #define LDNOTICE    "# ld.so.conf autogenerated by env-update; make all\n" \
                     "# changes to contents of /etc/env.d directory\n"
 
-static const char *specials[] = {
+static const char *colon_separated[] = {
 	"ADA_INCLUDE_PATH",
 	"ADA_OBJECTS_PATH",
 	"CLASSPATH",
@@ -50,7 +50,7 @@ static const char *specials[] = {
 	NULL
 };
 
-static const char *special_spaces[] = { 
+static const char *space_separated[] = { 
 	"CONFIG_PROTECT",
 	"CONFIG_PROTECT_MASK",
 	NULL,
@@ -65,11 +65,16 @@ int main (int argc, char **argv)
 	char **envs = NULL;
 	char *env;
 	int i = 0;
+	int j;
 	FILE *fp;
 	bool ld = true;
 	char *ldent;
 	char **ldents = NULL;
 	int nents = 0;
+	char **config = NULL;
+	char *entry;
+	char **mycolons = NULL;
+	char **myspaces = NULL;
 
 	applet = argv[0];
 
@@ -79,8 +84,6 @@ int main (int argc, char **argv)
 	STRLIST_FOREACH (files, file, i) {
 		char *path = rc_strcatpaths (ENVDIR, file, (char *) NULL);
 		char **entries = NULL;
-		char *entry;
-		int j;
 
 		if (! rc_is_dir (path))
 			entries = rc_get_config (NULL, path);
@@ -90,63 +93,97 @@ int main (int argc, char **argv)
 			char *tmpent = rc_xstrdup (entry);
 			char *value = tmpent;
 			char *var = strsep (&value, "=");
-			int k;
-			bool isspecial = false;
-			bool isspecial_spaced = false;
-			bool replaced = false;
 
-			for (k = 0; special_spaces[k]; k++)
-				if (strcmp (special_spaces[k], var) == 0) {
-					isspecial = true;
-					isspecial_spaced = true;
-					break;
-				}
-
-			if (! isspecial) {
-				for (k = 0; specials[k]; k++)
-					if (strcmp (specials[k], var) == 0) {
-						isspecial = true;
-						break;
-					}
-			}
-
-			/* Skip blank vars */
-			if (isspecial &&
-				(! value || strlen (value)) == 0)
-			{
-				free (tmpent);
-				continue;
-			}
-
-			STRLIST_FOREACH (envs, env, k) {
-				char *tmpenv = rc_xstrdup (env);
-				char *tmpvalue = tmpenv;
-				char *tmpentry = strsep (&tmpvalue, "=");
-
-				if (strcmp (tmpentry, var) == 0) {
-					if (isspecial) {
-						int len =  strlen (envs[k - 1]) + strlen (entry) + 1;
-						envs[k - 1] = rc_xrealloc (envs[k - 1], len);
-						snprintf (envs[k - 1] + strlen (envs[k - 1]), len,
-								  "%s%s", isspecial_spaced ? " " : ":", value);
-					} else {
-						free (envs[k - 1]);
-						envs[k - 1] = rc_xstrdup (entry);
-					}
-					replaced = true;
-				}
-				free (tmpenv);
-
-				if (replaced)
-					break;
-			}
-
-			if (! replaced)
-				envs = rc_strlist_addsort (envs, entry);
-
+			if (strcmp (var, "COLON_SEPARATED") == 0)
+				while ((var = strsep (&value, " ")))
+					mycolons = rc_strlist_addu (mycolons, var);
+			else if (strcmp (var, "SPACE_SEPARATED") == 0)
+				while ((var = strsep (&value, " ")))
+					myspaces = rc_strlist_addu (myspaces, var);
+			else
+				config = rc_strlist_add (config, entry);
 			free (tmpent);
 		}
+
+		rc_strlist_free (entries);
 	}
+
+	STRLIST_FOREACH (config, entry, i) {
+		char *tmpent = rc_xstrdup (entry);
+		char *value = tmpent;
+		char *var = strsep (&value, "=");
+		char *match;
+		bool colon = false;
+		bool space = false;
+		bool replaced = false;
+
+		for (j = 0; colon_separated[j]; j++)
+			if (strcmp (colon_separated[j], var) == 0) {
+				colon = true;
+				break;
+			}
+
+		if (! colon)
+			STRLIST_FOREACH  (mycolons, match, j) {
+				if (strcmp (match, var) == 0) {
+					colon = true;
+					break;
+				} }
+
+		if (! colon)
+			for (j = 0; space_separated[j]; j++)
+				if (strcmp (space_separated[j], var) == 0) {
+					space = true;
+					break;
+				}
+
+		if (! colon && ! space)
+			STRLIST_FOREACH  (myspaces, match, j)
+				if (strcmp (match, var) == 0) {
+					space = true;
+					break;
+				}
+
+		/* Skip blank vars */
+		if ((colon || space) &&
+			(! value || strlen (value)) == 0)
+		{
+			free (tmpent);
+			continue;
+		}
+
+		STRLIST_FOREACH (envs, env, j) {
+			char *tmpenv = rc_xstrdup (env);
+			char *tmpvalue = tmpenv;
+			char *tmpentry = strsep (&tmpvalue, "=");
+
+			if (strcmp (tmpentry, var) == 0) {
+				if (colon || space) {
+					int len =  strlen (envs[j - 1]) + strlen (entry) + 1;
+					envs[j - 1] = rc_xrealloc (envs[j - 1], len);
+					snprintf (envs[j - 1] + strlen (envs[j - 1]), len,
+							  "%s%s", colon ? ":" : " ", value);
+				} else {
+					free (envs[j - 1]);
+					envs[j - 1] = rc_xstrdup (entry);
+				}
+				replaced = true;
+			}
+			free (tmpenv);
+
+			if (replaced)
+				break;
+		}
+
+		if (! replaced)
+			envs = rc_strlist_addsort (envs, entry);
+
+		free (tmpent);
+	}
+	rc_strlist_free (mycolons);
+	rc_strlist_free (myspaces);
+	rc_strlist_free (config);
+	rc_strlist_free (files);
 
 	if ((fp = fopen (PROFILE_ENV, "w")) == NULL)
 		eerrorx ("%s: fopen `%s': %s", applet, PROFILE_ENV, strerror (errno));
@@ -181,7 +218,7 @@ int main (int argc, char **argv)
 	if (! ldent ||
 		(argc > 1 && argv[1] && strcmp (argv[1], "--no-ldconfig") == 0))
 	{
-		free (envs);
+		rc_strlist_free (envs);
 		return (EXIT_SUCCESS);
 	}
 
@@ -204,6 +241,7 @@ int main (int argc, char **argv)
 				ld = true;
 				break;
 			}
+		rc_strlist_free (lines);
 		if (i - 1 != nents)
 			ld = true;
 	}
@@ -228,5 +266,7 @@ int main (int argc, char **argv)
 		eend (retval, NULL);
 	}
 
+	rc_strlist_free (ldents);
+	rc_strlist_free (envs);
 	return(EXIT_SUCCESS);
 }
